SET(INC_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME})
INSTALL(FILES libcaer.h log.h portable_endian.h frame_utils.h DESTINATION ${INC_INSTALL_DIR})
INSTALL(DIRECTORY events DESTINATION ${INC_INSTALL_DIR})
INSTALL(DIRECTORY devices DESTINATION ${INC_INSTALL_DIR})

IF (ENABLE_OPENCV)
	INSTALL(FILES frame_utils_opencv.h DESTINATION ${INC_INSTALL_DIR})
ENDIF()
