IF (NOT ENABLE_CAFFEINTERFACE)
	SET(ENABLE_CAFFEINTERFACE 0 CACHE BOOL "Enable Caffe deep-learning framework interface module")

	IF (NOT CAFFE_CPU_ONLY)
		SET(CAFFE_CPU_ONLY 0 CACHE BOOL "Set Caffe framework to work only with the CPU, not with GPU support")
	ENDIF()
ENDIF()

IF (ENABLE_CAFFEINTERFACE)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_CAFFEINTERFACE=1)

	IF (CAFFE_CPU_ONLY)
		SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DCAFFE_CPU_ONLY=1)
	ENDIF()

	SET(CAFFEIF_INCDIRS "")
	SET(CAFFEIF_LIBDIRS "")
	SET(CAFFEIF_C_LIBS "")
	SET(CAFFEIF_C_SRC_FILES "")
	SET(CAFFEIF_CXX_LIBS "")
	SET(CAFFEIF_CXX_SRC_FILES "")

	# Deep-learning: Caffe interface with required libs.
	FIND_PACKAGE(Glog QUIET)
	IF (Glog_FOUND)
		MESSAGE(STATUS "Glog FOUND - ${Glog_LIBRARIES}")
		SET(CAFFEIF_INCDIRS ${CAFFEIF_INCDIRS} ${Glog_INCLUDE_DIRS})
		SET(CAFFEIF_LIBDIRS ${CAFFEIF_LIBDIRS} ${Glog_LIBRARY_DIRS})
		SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} ${Glog_LIBRARIES})
	ENDIF()

	FIND_PACKAGE(Boost)
	IF (Boost_FOUND)
		MESSAGE(STATUS "Boost FOUND - ${Boost_LIBRARIES}")
		SET(CAFFEIF_INCDIRS ${CAFFEIF_INCDIRS} ${Boost_INCLUDE_DIRS})
		SET(CAFFEIF_LIBDIRS ${CAFFEIF_LIBDIRS} ${Boost_LIBRARY_DIRS})
		SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} ${Boost_LIBRARIES})
	ENDIF()

	FIND_PACKAGE(OpenCV)
	IF (OpenCV_FOUND)
		MESSAGE(STATUS "OpenCV FOUND - ${OpenCV_LIBRARIES}")
		SET(CAFFEIF_INCDIRS ${CAFFEIF_INCDIRS} ${OpenCV_INCLUDE_DIRS})
		SET(CAFFEIF_LIBDIRS ${CAFFEIF_LIBDIRS} ${OpenCV_LIBRARY_DIRS})
		SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} ${OpenCV_LIBRARIES})
	ENDIF()

	FIND_PACKAGE(Caffe)
	IF (CAFFE_FOUND)
		MESSAGE(STATUS "Caffe FOUND - ${Caffe_LIBRARIES}")
		SET(CAFFEIF_INCDIRS ${CAFFEIF_INCDIRS} ${Caffe_INCLUDE_DIRS})
		SET(CAFFEIF_LIBDIRS ${CAFFEIF_LIBDIRS} ${Caffe_LIBRARY_DIRS})
		SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} ${Caffe_LIBRARIES})
	ENDIF()

	FIND_PACKAGE(Protobuf)
	IF (Protobuf_FOUND)
		MESSAGE(STATUS "Protobuf FOUND - ${Protobuf_LIBRARIES}")
		SET(CAFFEIF_INCDIRS ${CAFFEIF_INCDIRS} ${Protobuf_INCLUDE_DIRS})
		SET(CAFFEIF_LIBDIRS ${CAFFEIF_LIBDIRS} ${Protobuf_LIBRARY_DIRS})
		SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} ${Protobuf_LIBRARIES})
	ENDIF()

	IF (APPLE)
		MESSAGE(STATUS "WARNING - cblas.h via framework Accelerate path added manually in CMakeLists.txt. Please check!")
		SET(CAFFEIF_INCDIRS ${CAFFEIF_INCDIRS} "/System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/Headers/")
		SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} "-framework Accelerate")
	ELSE()
		FIND_PACKAGE(BLAS)
		IF (BLAS_FOUND)
			MESSAGE(STATUS "BLAS FOUND - ${BLAS_LIBRARIES}")
			SET(CAFFEIF_INCDIRS ${CAFFEIF_INCDIRS} ${BLAS_INCLUDE_DIRS})
			SET(CAFFEIF_LIBDIRS ${CAFFEIF_LIBDIRS} ${BLAS_LIBRARY_DIRS})
			SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} ${BLAS_LIBRARIES})
		ENDIF()
	ENDIF()

	IF (NOT CAFFE_CPU_ONLY)
		FIND_PACKAGE(CUDA)
		IF (CUDA_FOUND)
			MESSAGE(STATUS "CUDA FOUND - ${CUDA_LIBRARIES}")
			SET(CAFFEIF_INCDIRS ${CAFFEIF_INCDIRS} ${CUDA_INCLUDE_DIRS})
			SET(CAFFEIF_LIBDIRS ${CAFFEIF_LIBDIRS} ${CUDA_LIBRARY_DIRS})
			SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} ${CUDA_LIBRARIES})
		ENDIF()
	ENDIF()

	SET(CAFFEIF_C_LIBS ${CAFFEIF_C_LIBS} "-lglog -lboost_system -lprotobuf")
	SET(CAFFEIF_C_SRC_FILES ${CAFFEIF_C_SRC_FILES} modules/caffeinterface/caffewrapper_module.c)

	SET(CAFFEIF_CXX_LIBS ${CAFFEIF_CXX_LIBS} ${CAFFEIF_C_LIBS})
	SET(CAFFEIF_CXX_SRC_FILES ${CAFFEIF_CXX_SRC_FILES} modules/caffeinterface/classify.cpp modules/caffeinterface/wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${CAFFEIF_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${CAFFEIF_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${CAFFEIF_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${CAFFEIF_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${CAFFEIF_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${CAFFEIF_CXX_SRC_FILES} PARENT_SCOPE)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} PARENT_SCOPE)
ENDIF()
