IF (NOT ENABLE_CAMERACALIBRATION)
	SET(ENABLE_CAMERACALIBRATION 0 CACHE BOOL "Enable the camera calibration module (using OpenCV)")
ENDIF()

IF (ENABLE_CAMERACALIBRATION)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_CAMERACALIBRATION=1 PARENT_SCOPE)

	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(CALIB_INCDIRS ${OPENCV3_INCLUDE_DIRS})
	SET(CALIB_LIBDIRS ${OPENCV3_LIBRARY_DIRS})

	SET(CALIB_C_LIBS "")
	SET(CALIB_CXX_LIBS ${OPENCV3_LIBRARIES})

	SET(CALIB_C_SRC_FILES modules/cameracalibration/cameracalibration.c)
	SET(CALIB_CXX_SRC_FILES modules/cameracalibration/calibration.cpp modules/cameracalibration/calibration_wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${CALIB_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${CALIB_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${CALIB_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${CALIB_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${CALIB_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${CALIB_CXX_SRC_FILES} PARENT_SCOPE)
ENDIF()
