IF (NOT ENABLE_IMAGESTREAMERVISUALIZER)
	SET(ENABLE_IMAGESTREAMERVISUALIZER 0 CACHE BOOL "Enable the image streamer visualizer module, which generates images accumulating a fixed number of spikes")
ENDIF()

IF (ENABLE_IMAGESTREAMERVISUALIZER)

	PKG_CHECK_MODULES(ALLEGRO5_AUDIO REQUIRED)
	pkg_check_modules(ALLEGRO5_ACODEC REQUIRED)
	

	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_IMAGESTREAMERVISUALIZER=1 PARENT_SCOPE)

	SET(CAER_IMAGESTREAMERVISUALIZER_FILES modules/imagestreamervisualizer/imagestreamervisualizer.c)


	# Propagate to parent scope.
	SET(CAER_C_LIBS ${CAER_C_LIBS} "-lallegro_audio -lallegro_acodec" PARENT_SCOPE)
	
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${CAER_IMAGESTREAMERVISUALIZER_FILES} PARENT_SCOPE)

ENDIF()
